--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
 }
 .btn-primary:hover, .btn-primary:focus {
   color: #fff;
+  color: #fff;
   background-color: #d37678;
   border-color: #d16895;
 }
@@ -43,7 +44,7 @@ body {
   color: #000;
   overflow-x: hidden;
   height: 100%;
-  background-image: url("https://i.imgur.com/GMmCQHC.png");
+ 
   background-repeat: no-repeat;
   background-size: 100% 100%
 }
