--- a/style.css
+++ b/style.css
@@ -2759,7 +2759,7 @@ footer .footerLeft {
   }
 }
 
-@media screen and (min-width: 375px) and (max-width: 767px) {
+@media screen and (min-width: 375px) and (max-width: 424px) {
   .searchBarBtn {
     margin-top: 0px;
   }
@@ -3345,3 +3345,607 @@ footer .footerLeft {
     font-size: 12px !important;
   }
 }
+
+@media screen and (min-width: 425px) and (max-width: 767px) {
+  .bannerRow:hover {
+    transform: scale(1.06);
+    transition: transform 0.3s;
+  }
+  input,
+  textarea,
+  button {
+    padding: 8px 15px;
+    border-radius: 0px;
+    margin: 0px 0px;
+    box-sizing: border-box;
+    border: 1px solid #ccc;
+    font-size: 18px !important;
+    font-weight: 300;
+    border-radius: 0px;
+    border-top-left-radius: 5px;
+    border-top-right-radius: 5px;
+    border-bottom-right-radius: 5px;
+    border-bottom-left-radius: 5px;
+  }
+
+  .contenedorForm {
+    padding: 12px;
+  }
+
+  .bodycontact {
+    background-image: url(./Imagenes/mangabackground2.jpg);
+    background-size: 110%;
+    background-position: -10px;
+    background-attachment: fixed;
+    background-repeat: repeat;
+    display: grid;
+    grid-template:
+      "descuentoTituloCont"
+      "header"
+      "h21"
+      "formularioMain"
+      "subHome"
+      "footer" / 425px;
+  }
+
+  .gridContainer {
+    display: grid;
+
+    grid-template:
+      "descuentoTituloCont"
+      "header"
+      "h21"
+      "main1"
+      "h22"
+      "main2"
+      "tituloVioleta"
+      "main3"
+      "bannerHome"
+      "subHome"
+      "footer" / 425px;
+  }
+  .selector {
+    padding: 6px 6px;
+  }
+
+  .gridContainerMangaLibros {
+    display: grid;
+    width: fit-content;
+
+    grid-template:
+      "descuentoTitulo"
+      "header"
+      "h21"
+      "selector"
+      "contenidoContenedorMangaLibros"
+      "subHome"
+      "footer" /
+      425px;
+  }
+
+  .gridContainerOfertas {
+    display: grid;
+    grid-template:
+      "descuentoTitulo"
+      "header"
+      "h21"
+      "contenidoContenedor"
+      "subHome"
+      "footer" /
+      425px;
+  }
+
+  .navMenuItems li:hover,
+  li:active {
+    background-color: rgba(255, 228, 196, 0.3);
+
+    margin-bottom: 10px;
+    transition: 0.4s;
+  }
+  .precio1Oferta {
+    display: block;
+    font-weight: 400;
+    font-size: 22px;
+    color: #000;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+      Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+
+    font-weight: 700;
+    margin-top: 0px;
+    margin-right: 77px;
+    font-size: 28px;
+  }
+  .discount-label {
+    padding: 5px;
+    position: relative;
+    float: right;
+    margin-top: 2px;
+    margin-right: -3px;
+    width: 60px;
+    transform: scale(0.9);
+
+    -webkit-border-radius: 0 4px 0 4px;
+    -moz-border-radius: 0 4px 0 4px;
+    border-radius: 0 4px 4px 0;
+  }
+
+  .carritoIconoOfertas .fa-cart-plus {
+    float: right;
+
+    margin-top: 0px;
+    margin-right: 7px;
+    background-image: linear-gradient(315deg, red 0%, #db9833 74%);
+    font-size: 1.1em;
+    padding: 8px;
+    border-radius: 20px;
+    text-transform: uppercase;
+    font-weight: 600;
+    cursor: pointer;
+    color: #fff;
+    -ms-transition: 0.3s ease-in-out;
+    -webkit-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+  }
+
+  .carritoIconoOfertas .fa-cart-plus:hover {
+    background-image: linear-gradient(315deg, red 0%, #db7133 74%);
+    -webkit-transform: scale(1.1);
+    transform: scale(1.1);
+
+    -webkit-transition: 0.3s ease-in-out;
+    -ms-transition: 0.3s ease-in-out;
+    transition: 0.3s ease-in-out;
+  }
+
+  .carritoIconoOfertas i {
+    font-size: 30px;
+    line-height: 26px;
+  }
+  .seleccion {
+    font-size: 30px;
+    margin-top: 141px;
+    padding: 30px 12px;
+  }
+  .descuentoTituloCont {
+    height: 17px;
+    top: 0;
+    z-index: 10000;
+  }
+  .header {
+    position: fixed;
+    width: 425px;
+    top: 0;
+    z-index: 9999;
+    border-bottom: px solid darksalmon;
+    padding: 12px 0;
+    box-shadow: 0px 2px 15px #000;
+  }
+
+  .descuentoTexto {
+    background: linear-gradient(
+      90deg,
+      rgba(250, 128, 114) 0%,
+      darksalmon 50%,
+      rgba(250, 128, 114) 100%
+    );
+    text-align: center;
+    font-size: 14px;
+    font-weight: 100;
+  }
+
+  .barBtn {
+    display: flex;
+
+    margin-right: 25px;
+    font-size: 50px;
+    margin-top: 55px;
+  }
+
+  #check {
+    display: none;
+  }
+
+  .Logo {
+    display: flex;
+    margin-left: 0px;
+    margin-top: 70px;
+  }
+
+  .navMenu {
+    height: 150px;
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+  }
+
+  .navMenuItems {
+    position: fixed;
+    padding: 0;
+    margin: 0;
+    display: block;
+    background: rgba(0, 0, 0, 0.9);
+    width: 100%;
+    height: 0;
+    top: 174px;
+    text-align: center;
+
+    opacity: 0.2;
+    transition: 0.5s;
+  }
+
+  .navMenuItems li {
+    display: none;
+    line-height: 38px;
+    margin: 42px 0px;
+    padding: 0;
+    -webkit-transition: 1s ease;
+    -ms-transition: 1s ease;
+    transition: 1s ease;
+  }
+
+  .navMenuItems li a {
+    color: #fff;
+    -webkit-transition: 1s ease;
+    -ms-transition: 1s ease;
+    transition: 1s ease;
+    font-size: 20px;
+  }
+
+  .navMenuItems li i {
+    display: none;
+  }
+
+  .navMenuItems li a:hover {
+    color: darksalmon;
+    transition: 0.3s;
+  }
+
+  .searchBar input {
+    width: 288px;
+  }
+
+  .searchBar {
+    margin-left: 17%;
+    margin-bottom: 70px;
+  }
+
+  .searchBarBtn {
+    top: 0;
+    right: 0;
+    margin-top: 0px;
+  }
+
+  .buyBtn {
+    position: absolute;
+    font-size: 30px;
+    margin-top: 150px;
+    margin-left: 161px;
+    cursor: pointer;
+  }
+
+  .userLog {
+    position: absolute;
+    font-size: 30px;
+    margin-top: 0px;
+    margin-left: 35px;
+    cursor: pointer;
+  }
+
+  #check:checked ~ .navMenuItems {
+    height: 100vh;
+    z-index: 10;
+    -webkit-transition: 0.1s ease-in-out;
+    -ms-transition: 0.1s ease-in-out;
+    transition: 0.1s ease-in-out;
+    opacity: 1;
+    width: 425px;
+  }
+
+  #check:checked ~ .navMenuItems li {
+    display: block;
+    padding: 20px;
+    font-size: 40px;
+    margin: 0;
+    margin-top: 7px;
+  }
+
+  .contenido,
+  .contenidoMangaLibros {
+    width: 80%;
+    height: 440px;
+  }
+
+  .contenidoInfo {
+    margin-top: 0px;
+  }
+
+  .carritoIcono .fa-cart-plus {
+    margin-right: 39px;
+    padding: 24px;
+  }
+
+  .carritoIconoMangaLibros .fa-cart-plus {
+    margin-right: 0;
+    padding: 0;
+    font-size: 26px;
+  }
+  .carritoIconoMangaLibros {
+    margin-right: 101px;
+    padding: 6px 12px;
+    margin-top: 26px;
+  }
+
+  .contenidoImagen img {
+    height: 350px;
+    width: 235px;
+    max-height: 350px;
+  }
+
+  .contenidoInfo h2,
+  .contenidoInfoMangaLibros h2 {
+    font-size: 30px;
+  }
+  span .carritoTexto,
+  span .carritoTextoMangaLibros {
+    margin-left: 5px;
+    font-size: 12px;
+  }
+
+  .carritoIcono .fa-cart-plus {
+    margin-right: 125px;
+    padding: 6px 12px;
+    margin-top: 5px;
+  }
+
+  .fa-cart-plus:before {
+    content: "\f217";
+    font-size: 15px;
+  }
+
+  .contenidoInfo,
+  .contenidoInfoMangaLibros {
+    color: black;
+    margin-top: 0px;
+    margin-left: 0;
+    width: 272px;
+  }
+
+  .contenidoInfo h2,
+  .contenidoInfoMangaLibros h2 {
+    font-size: 20px;
+    font-weight: 600;
+    text-align: center;
+    width: 306px;
+  }
+  .precio1 {
+    margin-top: 23px;
+    margin-right: 15px;
+    font-size: 28px;
+  }
+
+  .precio1Index {
+    margin-top: 0px;
+    margin-right: 25px;
+    font-size: 28px;
+  }
+
+  .seleccion3 {
+    font-size: 30px;
+    padding: 12px 12px;
+  }
+
+  .tituloVioleta .seleccion2 {
+    font-size: 30px;
+    padding: 12px 12px;
+  }
+
+  .flechaBanner {
+    font-size: 20px;
+  }
+
+  .textoBannerTexto {
+    font-size: 18px;
+    margin-top: 8px;
+    margin-left: 5px;
+  }
+
+  .imagenBanner {
+    width: 100%;
+    height: 120px;
+  }
+
+  .bannerContainer {
+    display: flex;
+    flex-wrap: wrap;
+    flex-direction: column;
+    gap: 20px;
+  }
+
+  .bannerRow {
+    margin-left: -29px;
+    width: 119%;
+    height: auto;
+  }
+
+  .subContenido1 {
+    font-size: 17px;
+    max-width: 100%;
+    text-align: center;
+    padding: 8px;
+    margin-bottom: 0px;
+  }
+  .subContenido2 {
+    display: flex;
+    height: 37px;
+    margin-top: -20px;
+  }
+
+  .emailLargo {
+    font-size: 16px;
+
+    width: 200px;
+  }
+
+  .btnNew {
+    font-size: 20px;
+    width: 100px;
+  }
+
+  .footer {
+    box-shadow: 0 1px 1px 0 rgb(221 210 210 / 12%);
+    box-sizing: border-box;
+    width: 100%;
+    text-align: center;
+    font: bold 16px sans-serif;
+    padding: 20px 20px;
+    background-color: #2d3e50;
+    max-height: fit-content;
+
+    display: flex;
+    flex-direction: column;
+  }
+
+  footer .footerLeft {
+    width: auto;
+  }
+
+  .footerLeft h3 p {
+    font-size: 40px;
+  }
+  .footer h3 {
+    font-size: 50px;
+  }
+
+  .LogoImagen {
+    width: 100px;
+  }
+
+  .footer .footerLinks {
+    font-size: 16px;
+  }
+
+  .footer .footerCompName {
+    color: rgb(121, 121, 121);
+    font-size: 16px;
+  }
+
+  .footer .footerCenter {
+    width: auto;
+    padding: 20px 0px;
+  }
+
+  .footer .footerCenter i {
+    margin: 19px 5px;
+  }
+
+  .footer .footerCenter p {
+    font-size: 16px;
+  }
+
+  .footer .footerRight {
+    width: auto;
+  }
+
+  .footer .footerAbout span {
+    font-size: 20px;
+  }
+
+  .footer .footerAbout {
+    line-height: 40px;
+    color: #92999f;
+    font-size: 16px;
+  }
+
+  .footer .footerIcons {
+    margin-left: 50px;
+  }
+
+  .footer .footerIcons a {
+    margin-right: 39px;
+    margin-bottom: 5px;
+    transform: scale(1.5);
+  }
+
+  .formSelect {
+    font-size: 16px;
+    width: 98%;
+    padding: 0px 10px;
+    height: 50px;
+  }
+
+  .paginacion {
+    width: 280px;
+  }
+
+  .selectorContainer {
+    width: 100%;
+  }
+
+  .paginacion .paginacionLink {
+    font-size: 15px;
+  }
+
+  .paginacion .divider {
+    font-size: 15px;
+  }
+
+  .paginacion .crumbActive {
+    font-size: 17px;
+  }
+
+  .formularioMain {
+    height: 850px;
+  }
+
+  .contenedor .form {
+    margin-top: 83px;
+  }
+
+  .contenedor .form {
+    transform: scale(1.1);
+  }
+
+  .contenedor .form .formLabel {
+    display: block;
+    font-size: 25px;
+  }
+  .contenedor .form .formInput {
+    font-size: 27px;
+  }
+
+  .contenedor .form .formTextarea {
+    font-size: 27px;
+  }
+  .contenedor .form .btnSumbit {
+    font-size: 30px;
+  }
+
+  .subHomeContainer {
+    width: 100%;
+    padding: 20px 20px;
+  }
+
+  .form-control-label {
+    margin-bottom: 0;
+    font-size: 16px;
+  }
+
+  .form-check {
+    padding-left: 0.5em;
+  }
+  .formularioMain input {
+    padding: 8px 11px;
+    font-size: 12px !important;
+  }
+  .fs-6 {
+    font-size: 14px;
+  }
+
+  .form-check-label {
+    margin-left: 11px;
+    font-size: 14px;
+    padding: 0 !important;
+  }
+
+}
+
