--- a/css/style.css
+++ b/css/style.css
@@ -1543,7 +1543,7 @@ footer .footerLeft {
   }
 
   #check:checked ~ .navMenuItems {
-    height: 100vh;
+    height: fit-content;
     z-index: 10;
     -webkit-transition: 0.1s ease-in-out;
     -ms-transition: 0.1s ease-in-out;
@@ -2131,7 +2131,7 @@ footer .footerLeft {
   }
 
   #check:checked ~ .navMenuItems {
-    height: 100vh;
+    height: fit-content;
     z-index: 10;
     -webkit-transition: 0.1s ease-in-out;
     -ms-transition: 0.1s ease-in-out;
@@ -2559,7 +2559,8 @@ footer .footerLeft {
   .carritoIconoOfertas .fa-cart-plus {
     float: left;
     margin-top: 0px;
-    margin-left: 17px;
+    margin-left: 14px;
+    margin-right: 0;
     background-image: linear-gradient(315deg, red 0%, #db9833 74%);
     font-size: 1.1em;
     padding: 8px;
@@ -2718,7 +2719,7 @@ footer .footerLeft {
   }
 
   #check:checked ~ .navMenuItems {
-    height: 100vh;
+    height: fit-content;
     z-index: 10;
     -webkit-transition: 0.1s ease-in-out;
     -ms-transition: 0.1s ease-in-out;
@@ -3329,7 +3330,7 @@ footer .footerLeft {
   }
 
   #check:checked ~ .navMenuItems {
-    height: 100vh;
+    height: fit-content;
     z-index: 10;
     -webkit-transition: 0.1s ease-in-out;
     -ms-transition: 0.1s ease-in-out;
