--- a/css/main.css
+++ b/css/main.css
@@ -22,6 +22,12 @@
 
 /* maps close */
 /* mixing */
+.subForm {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .card {
   background: linear-gradient(221deg, salmon 0%, #db9833 50%, salmon 100%);
   padding: 30px 40px;
@@ -238,7 +244,7 @@ button:focus {
 .gridContainer {
   display: -ms-grid;
   display: grid;
-  grid-template: "descuentoTitulo" "header" "h21" "main1" "bannerHome" "h22" "main2" "tituloVioleta" "main3" "subHome" "footer" / 1920px;
+  grid-template: "descuentoTitulo" "header" "h21" "main1" "bannerHome" "h22" "main2" "tituloVioleta" "main3" "subHome" "footer"/ 1920px;
 }
 
 .gridContainerMangaLibros {
@@ -1409,12 +1415,12 @@ div .subContenido {
     background-repeat: repeat;
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer" / 320px;
+    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer"/ 320px;
   }
   .gridContainer {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "main1" "h22" "main2" "tituloVioleta" "main3" "bannerHome" "subHome" "footer" / 320px;
+    grid-template: "descuentoTituloCont" "header" "h21" "main1" "h22" "main2" "tituloVioleta" "main3" "bannerHome" "subHome" "footer"/ 320px;
   }
   .selector {
     padding: 6px 6px;
@@ -1425,12 +1431,12 @@ div .subContenido {
     width: -webkit-fit-content;
     width: -moz-fit-content;
     width: fit-content;
-    grid-template: "header" "descuentoTitulo" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer" / 320px;
+    grid-template: "header" "descuentoTitulo" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer"/ 320px;
   }
   .gridContainerOfertas {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer" / 320px;
+    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer"/ 320px;
   }
   .navMenuItems li:hover,
   li:active {
@@ -1964,12 +1970,12 @@ div .subContenido {
     background-repeat: repeat;
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer" / auto;
+    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer"/ auto;
   }
   .gridContainer {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "main1" "h22" "main2" "tituloVioleta" "main3" "bannerHome" "subHome" "footer" / auto;
+    grid-template: "descuentoTituloCont" "header" "h21" "main1" "h22" "main2" "tituloVioleta" "main3" "bannerHome" "subHome" "footer"/ auto;
   }
   .selector {
     padding: 6px 6px;
@@ -1979,12 +1985,12 @@ div .subContenido {
     display: grid;
     width: -webkit-fit-content;
     width: -moz-fit-content;
-    grid-template: "header" "descuentoTitulo" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer" / auto;
+    grid-template: "header" "descuentoTitulo" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer"/ auto;
   }
   .gridContainerOfertas {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer" / auto;
+    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer"/ auto;
   }
   .navMenuItems li:hover,
   li:active {
@@ -2478,8 +2484,8 @@ div .subContenido {
     padding: 9px;
   }
   .bannerRow {
-    margin-left: -33px;
-    width: 124%;
+    margin-left: -31px;
+    width: 120%;
     height: auto;
   }
   .bannerRow:hover {
@@ -2518,12 +2524,12 @@ div .subContenido {
     background-repeat: repeat;
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer" / auto;
+    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer"/ auto;
   }
   .gridContainer {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "main1" "h22" "main2" "tituloVioleta" "main3" "bannerHome" "subHome" "footer" / auto;
+    grid-template: "descuentoTituloCont" "header" "h21" "main1" "h22" "main2" "tituloVioleta" "main3" "bannerHome" "subHome" "footer"/ auto;
   }
   .selector {
     padding: 6px 6px;
@@ -2533,12 +2539,12 @@ div .subContenido {
     display: grid;
     width: -webkit-fit-content;
     width: -moz-fit-content;
-    grid-template: "header" "descuentoTitulo" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer" / auto;
+    grid-template: "header" "descuentoTitulo" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer"/ auto;
   }
   .gridContainerOfertas {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer" / auto;
+    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer"/ auto;
   }
   .navMenuItems li:hover,
   li:active {
@@ -3083,12 +3089,12 @@ div .subContenido {
     background-repeat: repeat;
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer" / auto;
+    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer"/ auto;
   }
   .gridContainer {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "main1" "h22" "main2" "tituloVioleta" "main3" "bannerHome" "subHome" "footer" / auto;
+    grid-template: "descuentoTituloCont" "header" "h21" "main1" "h22" "main2" "tituloVioleta" "main3" "bannerHome" "subHome" "footer"/ auto;
   }
   .selector {
     padding: 6px 6px;
@@ -3098,12 +3104,12 @@ div .subContenido {
     display: grid;
     width: -webkit-fit-content;
     width: -moz-fit-content;
-    grid-template: "header" "descuentoTitulo" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer" / auto;
+    grid-template: "header" "descuentoTitulo" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer"/ auto;
   }
   .gridContainerOfertas {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer" / auto;
+    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer"/ auto;
   }
   .navMenuItems li:hover,
   li:active {
@@ -3520,8 +3526,8 @@ div .subContenido {
     font-size: 40px;
   }
   .LogoImagen {
-    width: 46px;
-    margin-left: 0px;
+    width: 56px;
+    margin-left: 10px;
     margin-top: 0px;
     margin-top: -74px;
   }
@@ -3637,6 +3643,9 @@ div .subContenido {
     margin-right: 11px;
     margin-bottom: 0px;
   }
+  .descuentoTexto {
+    margin-bottom: 0rem;
+  }
   .bodycontact {
     background-image: url(../Imagenes/mangabackground2.jpg);
     background-size: 120%;
@@ -3645,28 +3654,28 @@ div .subContenido {
     background-repeat: repeat;
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "formularioMain" "subHome" "footer";
+    grid-template: "descuentoTitulo" "header" "h21" "formularioMain" "subHome" "footer"/ auto;
   }
   .gridContainerOfertas {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer" / 768px;
+    grid-template: "descuentoTitulo" "header" "h21" "contenidoContenedor" "subHome" "footer"/ auto;
   }
   .gridContainerMangaLibros {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer" / 768px;
+    grid-template: "descuentoTitulo" "header" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer"/ auto;
   }
   .searchBar {
     margin-left: 0px;
   }
   .navMenu {
-    width: 768px;
+    width: auto;
   }
   .gridContainer {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "main1" "bannerHome" "h22" "main2" "tituloVioleta" "main3" "subHome" "footer" / 768px;
+    grid-template: "descuentoTitulo" "header" "h21" "main1" "bannerHome" "h22" "main2" "tituloVioleta" "main3" "subHome" "footer"/ auto;
   }
   .precio1Oferta {
     display: block;
@@ -3742,12 +3751,12 @@ div .subContenido {
     width: -moz-max-content;
     width: max-content;
     margin-left: 0px;
-    margin-right: 21px;
+    margin-right: 44px;
     padding-left: 0rem;
   }
   .navMenuItems li {
     padding: 0px 0px;
-    margin: 0 7px;
+    margin: 0 10px;
   }
   .navMenuItems li i {
     margin: 0 0px;
@@ -3904,7 +3913,7 @@ div .subContenido {
   .gridContainer {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "main1" "bannerHome" "h22" "main2" "tituloVioleta" "main3" "subHome" "footer" / 1024px;
+    grid-template: "descuentoTitulo" "header" "h21" "main1" "bannerHome" "h22" "main2" "tituloVioleta" "main3" "subHome" "footer"/ 1024px;
   }
   .bodycontact {
     background-image: url(../Imagenes/mangabackground2.jpg);
@@ -3914,7 +3923,7 @@ div .subContenido {
     background-repeat: repeat;
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer" / 1024px;
+    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer"/ 1024px;
   }
   .Logo {
     margin-left: 0px;
@@ -3922,7 +3931,7 @@ div .subContenido {
   .gridContainerMangaLibros {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer" / 1024px;
+    grid-template: "descuentoTitulo" "header" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer"/ 1024px;
   }
   .precio1Oferta {
     display: block;
@@ -4004,7 +4013,7 @@ div .subContenido {
   .descuentoTexto {
     font-family: sans-serif;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 1rem;
   }
   .navMenu {
     display: -webkit-box;
@@ -4030,7 +4039,7 @@ div .subContenido {
     font-weight: bold;
     list-style: none;
     font-weight: bold;
-    margin-left: 11px;
+    margin-left: -32px;
     margin-top: 120px;
     width: 800px;
     margin-right: 54px;
@@ -4345,7 +4354,7 @@ div .subContenido {
   .gridContainer {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "main1" "bannerHome" "h22" "main2" "tituloVioleta" "main3" "subHome" "footer" / 1280px;
+    grid-template: "descuentoTitulo" "header" "h21" "main1" "bannerHome" "h22" "main2" "tituloVioleta" "main3" "subHome" "footer"/ 1280px;
   }
   .bodycontact {
     background-image: url(../Imagenes/mangabackground2.jpg);
@@ -4355,15 +4364,15 @@ div .subContenido {
     background-repeat: repeat;
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer" / 1280px;
+    grid-template: "descuentoTituloCont" "header" "h21" "formularioMain" "subHome" "footer"/ 1280px;
   }
   .Logo {
-    margin-left: 0px;
+    margin-left: 56px;
   }
   .gridContainerMangaLibros {
     display: -ms-grid;
     display: grid;
-    grid-template: "descuentoTitulo" "header" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer" / 1280px;
+    grid-template: "descuentoTitulo" "header" "h21" "selector" "contenidoContenedorMangaLibros" "subHome" "footer"/ 1280px;
   }
   .precio1Oferta {
     display: block;
@@ -4446,7 +4455,7 @@ div .subContenido {
   .descuentoTexto {
     font-family: sans-serif;
     font-weight: 500;
-    font-size: 20px;
+    font-size: 1rem;
   }
   .navMenu {
     display: -webkit-box;
@@ -4472,13 +4481,13 @@ div .subContenido {
     font-weight: bold;
     list-style: none;
     font-weight: bold;
-    margin-left: 11px;
+    margin-left: 0px;
     margin-top: 120px;
     width: 800px;
-    margin-right: 54px;
+    margin-right: 182px;
   }
   .navMenuItems li {
-    padding: 0px 0px;
+    padding: 0px 5px;
     margin: 0 9px;
     border-radius: 3px;
     font-size: 20px;
@@ -4511,7 +4520,7 @@ div .subContenido {
   }
   .userLog {
     margin-bottom: 60px;
-    margin-right: 9px;
+    margin-right: 15px;
     cursor: pointer;
     font-size: 25px;
   }
